--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/montserrat": "^5.0.16",
 		"bits-ui": "^0.9.8",
 		"clsx": "^2.0.0",
 		"radix-icons-svelte": "^1.2.1",
