--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
 		"@fontsource-variable/montserrat": "^5.0.16",
 		"bits-ui": "^0.9.8",
 		"clsx": "^2.0.0",
+		"formsnap": "^0.4.1",
 		"radix-icons-svelte": "^1.2.1",
+		"sveltekit-superforms": "^1.10.2",
 		"tailwind-merge": "^2.0.0",
-		"tailwind-variants": "^0.1.18"
+		"tailwind-variants": "^0.1.18",
+		"zod": "^3.22.4"
 	}
 }
